--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Front End Capstone at Hack Reactor",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "nodemon": "nodemon server/index.js"
   },
   "repository": {
     "type": "git",
@@ -17,21 +18,23 @@
   },
   "homepage": "https://github.com/hrnyc19-arcadia/NC-service#readme",
   "dependencies": {
-    "bootstrap": "^4.1.3",
     "axios": "^0.18.0",
-    "body-parser": "^1.15.2",
-    "express": "^4.14.0",
-    "mongoose": "^4.5.7",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "chai": "^3.5.0",
-    "chai-things": "^0.2.0",
-    "mocha": "^3.0.2",
+    "babel-core": "^6.17.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
+    "body-parser": "^1.15.2",
+    "bootstrap": "^4.1.3",
+    "chai": "^3.5.0",
+    "chai-things": "^0.2.0",
+    "express": "^4.14.0",
+    "mocha": "^3.0.2",
+    "mongoose": "^4.5.7",
     "nodemon": "^1.11.0",
-    "webpack": "^1.13.2",
-    "babel-core": "^6.17.0"
+    "params-parser": "0.0.3",
+    "query-string": "^6.2.0",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
+    "webpack": "^1.13.2"
   }
 }
