--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Front End Capstone at Hack Reactor",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "nodemon": "nodemon server/index.js"
+    "test": "jest resources/test.js --notify",
+    "nodemon": "nodemon server/index.js",
+    "webpack": "webpack -d --watch"
   },
   "repository": {
     "type": "git",
@@ -18,23 +19,29 @@
   },
   "homepage": "https://github.com/hrnyc19-arcadia/NC-service#readme",
   "dependencies": {
+   
     "axios": "^0.18.0",
     "babel-core": "^6.17.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "body-parser": "^1.15.2",
-    "bootstrap": "^4.1.3",
     "chai": "^3.5.0",
     "chai-things": "^0.2.0",
     "express": "^4.14.0",
+    "jest": "^23.6.0",
+    "jquery": "^3.3.1",
     "mocha": "^3.0.2",
     "mongoose": "^4.5.7",
     "nodemon": "^1.11.0",
     "params-parser": "0.0.3",
+    "popper": "^1.0.1",
     "query-string": "^6.2.0",
     "react": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "webpack": "^1.13.2"
+    "react-dom": "^15.3.2"
+    
+  },
+  "devDependencies": {
+    "webpack-cli": "^3.1.2"
   }
 }
