--- a/package.json
+++ b/package.json
@@ -3,32 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-scripts": "2.1.2",
-"express": "^4.14.0",
-"jquery": "^3.3.1",
- "mongoose": "^4.5.7",
+    "bootstrap": "^3.3.7",
+    "express": "^4.14.0",
+    "jquery": "^3.3.1",
+    "mongoose": "^4.5.7",
     "nodemon": "^1.11.0",
-"popper": "^1.0.1"
+    "popper.js": "^1.14.6",
+    "react": "^16.7.0",
+    "react-bootstrap": "^0.32.4",
+    "react-dom": "^16.7.0",
+    "react-image": "^1.5.1",
+    "react-scripts": "2.1.2"
   },
- "devDependencies": {
-    "webpack-cli": "^3.1.2",
-	 "babel-core": "^6.17.0",
-    "babel-loader": "^6.2.5",
-    "babel-preset-es2015": "^6.16.0",
-    "babel-preset-react": "^6.16.0",
-"chai": "^3.5.0",
+  "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.4",
+    "chai": "^3.5.0",
     "chai-things": "^0.2.0",
- "jest": "^23.6.0",
-"mocha": "^3.0.2"
+    "jest": "^23.6.0",
+    "mocha": "^3.0.2",
+    "webpack": "^4.28.3",
+    "webpack-cli": "^3.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-	 "test-dev": "jest resources/test.js --notify",
+    "test-dev": "jest resources/test.js --notify",
     "nodemon": "nodemon server/index.js",
     "webpack": "webpack -d --watch"
   },
