--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.7.0",
     "react-image": "^1.5.1",
+    "react-js-pagination": "^3.0.2",
     "react-scripts": "2.1.2"
   },
   "devDependencies": {
@@ -22,8 +23,10 @@
     "babel-loader": "^8.0.4",
     "chai": "^3.5.0",
     "chai-things": "^0.2.0",
+    "css-loader": "^2.1.0",
     "jest": "^23.6.0",
     "mocha": "^3.0.2",
+    "style-loader": "^0.23.1",
     "webpack": "^4.28.3",
     "webpack-cli": "^3.1.2"
   },
