--- a/package.json
+++ b/package.json
@@ -31,12 +31,10 @@
     "webpack-cli": "^3.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "nodemon server/index.js",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "test-dev": "jest resources/test.js --notify",
-    "nodemon": "nodemon server/index.js",
+    "test": "jest resources/test.js --notify",
+    "eject": "react-scripts eject",        
     "webpack": "webpack -d --watch",
     "mockdata": "node server/FSdataImport.js"
   },
