--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "webpack-cli": "^3.1.2"
   },
   "scripts": {
-    "start": "nodemon server/index.js",
+    "start": "node server/index.js",
     "build": "react-scripts build",
     "test": "jest resources/test.js --notify",
     "eject": "react-scripts eject",        
