--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "webpack-cli": "^3.1.2"
   },
   "scripts": {
-    "start": "node server/index.js",
-	"heroku-postbuild": "webpack",
+    "start": "webpack & node server/index.js",	
     "build": "react-scripts build",
     "test": "jest resources/test.js --notify",
     "eject": "react-scripts eject",        
