--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "scripts": {
     "dev": "node server/index.js",	
-	"heroku-postbuild": "webpack -p && nodemon server/index.js",
+	"heroku-postbuild": "webpack --mode production && node server/index.js",
     "build": "react-scripts build",
     "test": "jest resources/test.js --notify",
     "eject": "react-scripts eject",        
