--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
     "webpack-cli": "^3.1.2"
   },
   "scripts": {
+"start": "node server/index.js",
     "dev": "node server/index.js",	
-	"heroku-postbuild": "webpack --mode=production && nodemon server/index.js",
+	"heroku-postbuild": "webpack --mode=production,
     "build": "react-scripts build",
     "test": "jest resources/test.js --notify",
     "eject": "react-scripts eject",        
